# ddsketchy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  release-plz.toml
.github/workflows/: release-plz.yml  rust.yml
benches/: dd_sketchy_bench.rs  ddsketch_bench.rs  ddsketchy_bench.rs  insert_compare.rs
examples/: compare_serialization.rs  debug_serde.rs  readme_example.rs  readme_serde_example.rs
src/: datadog_reference_tests.rs  dd_sketchy.rs  dd_sketchy_example.rs  dd_sketchy_test.rs  ddsketchy.rs  ddsketchy_test.rs  lib.rs  mapping.rs  python.rs  serde_tests.rs  store.rs
tests/: error_bounds_validation.rs  min_indexable_value.rs  test_python_bindings.py
