[package]
name = "dd_sketchy"
version = "0.1.0"
authors = ["Patrick McGleenon"]
edition = "2021"
description = "DD Sketch in Rust, benchmarked against sketches-ddsketch"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pmcgleenon/ddsketchy"

[[bench]]
name = "dd_sketchy_bench"
harness = false

[[bench]]
name = "ddsketch_bench"
harness = false

[[bin]]
name = "add_operations"
path = "bin/add_operations.rs"

[[bin]]
name = "merge_operations"
path = "bin/merge_operations.rs"

[[bin]]
name = "quantile_operations"
path = "bin/quantile_operations.rs"

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = "0.4"
approx = "0.5"
# existing Go-port implementation
sketches-ddsketch = "0.3"

[profile.release]
debug = true
opt-level = 0       
