[package]
name = "dd_sketchy"
version = "0.1.0"
authors = ["Patrick McGleenon"]
edition = "2021"
description = "DD Sketch in Rust"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pmcgleenon/ddsketchy"

[[bench]]
name = "dd_sketchy_bench"
harness = false

[[bench]]
name = "ddsketch_bench"
harness = false

[dependencies]
# No runtime dependencies - core DDSketch is dependency-free

[dev-dependencies]
rand = "0.9"
rand_distr = "0.5.1"
criterion = "0.6"
approx = "0.5"
# existing Go-port implementation for comparison
sketches-ddsketch = "0.3"

[profile.release]
#debug = true
#opt-level = 0       
