[package]
name = "ddsketchy"
version = "0.1.2"
authors = ["Patrick McGleenon"]
edition = "2021"
rust-version = "1.86.0"
description = "DD Sketch in Rust"
license = "Apache-2.0 OR MIT"
categories = ["data-structures", "algorithms"]
exclude = [".github"]
repository = "https://github.com/pmcgleenon/ddsketchy"
documentation = "https://docs.rs/ddsketchy"
keywords = ["ddsketch", "sketch", "data-structure"]

[[bench]]
name = "ddsketchy_bench"
harness = false

[[bench]]
name = "ddsketch_bench"
harness = false

[[example]]
name = "readme_example"

[[example]]
name = "compare_serialization"
required-features = ["serde"]

[[example]]
name = "readme_serde_example"
required-features = ["serde"]


[dependencies]
# Optional serialization support
serde = { version = "1.0", optional = true, features = ["derive"] }

# No other runtime dependencies - core DDSketch is dependency-free

[dev-dependencies]
rand = "0.9"
rand_distr = "0.5.1"
criterion = "0.8"
approx = "0.5"
# existing Go-port implementation for comparison
sketches-ddsketch = "0.3"
# For serialization testing
serde_json = "1.0"

[features]
default = []
# Enable serialization support with serde
serde = ["dep:serde"]

[profile.release]
#debug = true
#opt-level = 0
